--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,11 +332,17 @@ h1, h2, h3, h4, h5, h6 {
   background: transparent;
   color: #fff;
 }
+.img-fluid {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 10%;
+}
 @media (max-width: 991px) {
   #hero .hero-img {
     text-align: center;
   }
   #hero .hero-img img {
+    
     width: 50%;
   }
 }
@@ -458,7 +464,7 @@ section {
 /*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
-.clients {
+/* .clients {
   padding: 0;
 }
 .clients .client-logo {
@@ -476,17 +482,48 @@ section {
 }
 .clients img {
   transition: all 0.4s ease-in-out;
+} */
+
+
+/*--------------------------------------------------------------
+# Clients
+--------------------------------------------------------------*/
+.clients .clients-slider .swiper-slide img {
+  /* opacity: 0.5; */
+  transition: 0.3s;
+}
+.clients .clients-slider .swiper-slide img:hover {
+  opacity: 1;
+}
+.clients .clients-slider .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+.clients .clients-slider .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #4154f1;
+}
+.clients .clients-slider .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #4154f1;
 }
 
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+.about{
+  background: #fff;
+}
 .about .content h3 {
+  background: #fff;
   font-weight: 700;
   font-size: 34px;
   color: #213b52;
 }
 .about .content p {
+  background: #fff;
   margin-bottom: 0;
 }
 .about .content .icon-box h4 {
@@ -502,7 +539,12 @@ section {
 .about .content .icon-box h4 a:hover {
   color: #fdc134;
 }
-.about .content .icon-box i {
+.about .content .icon-box {
+  font-size: 48px;
+  float: left;
+  color: #fdc134;
+}
+.iconify{
   font-size: 48px;
   float: left;
   color: #fdc134;
@@ -794,10 +836,14 @@ section {
 .team .member .pic {
   margin-bottom: 15px;
   overflow: hidden;
-  min-height: 260px;
+  min-height: 160px;
 }
 .team .member .pic img {
-  max-width: 100%;
+  /* max-width: 50%; */
+  height: 250px;
+  width: 250px;
+  margin: 0 auto ;
+  border-radius: 50%;
 }
 .team .member h4 {
   font-weight: 700;
@@ -1197,5 +1243,81 @@ section {
     padding: 5px;
     float: none;
     text-align: ceneter;
+  }
+}
+
+
+/*--------------------------------------------------------------
+# Testimonials
+--------------------------------------------------------------*/
+.testimonials .testimonial-item {
+  box-sizing: content-box;
+  padding: 30px;
+  margin: 40px 30px;
+  box-shadow: 0px 0 20px rgba(1, 41, 112, 0.1);
+  background: #fff;
+  min-height: 320px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  transition: 0.3s;
+}
+.testimonials .testimonial-item .stars {
+  margin-bottom: 15px;
+}
+.testimonials .testimonial-item .stars i {
+  color: #ffc107;
+  margin: 0 1px;
+}
+.testimonials .testimonial-item .testimonial-img {
+  width: 90px;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  margin: 0 auto;
+}
+.testimonials .testimonial-item h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0 5px 0;
+  color: #111;
+}
+.testimonials .testimonial-item h4 {
+  font-size: 14px;
+  color: #999;
+  margin: 0;
+}
+.testimonials .testimonial-item p {
+  font-style: italic;
+  margin: 0 auto 15px auto;
+}
+.testimonials .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #4154f1;
+}
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #4154f1;
+}
+.testimonials .swiper-slide {
+  opacity: 0.3;
+}
+@media (max-width: 1199px) {
+  .testimonials .swiper-slide-active {
+    opacity: 1;
+  }
+  .testimonials .swiper-pagination {
+    margin-top: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .testimonials .swiper-slide-next {
+    opacity: 1;
+    transform: scale(1.12);
   }
 }
